<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:transitionGroup="false"
        android:touchscreenBlocksFocus="false"
        android:measureWithLargestChild="false"
        android:layout_margin="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cover"
            android:src="@drawable/defaulticon"
            android:layout_weight="0.65"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:contentDescription="@string/icon" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.19">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/name"
                    android:id="@+id/name"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:id="@+id/genres"
                    android:textColor="#999999" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.81">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albums_tracks"
                    android:id="@+id/albums_tracks"
                    android:textColor="#999999" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>